Correzione flussi di accreditamento/variazionedati/conclusioneprocedim.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -10,13 +10,13 @@ IdFieldEnum.ACCREDITAMENTO_ALLEGATI__RELAZIONE_ATTIVITA_FORMATIVA=Modifica Relaz
 IdFieldEnum.ACCREDITAMENTO_ALLEGATI__RICHIESTA_ACCREDITAMENTO_STANDARD=Modifica Richista di accreditamento standard
 IdFieldEnum.ACCREDITAMENTO_ALLEGATI__SISTEMA_INFORMATICO=Modifica Sistema informatico dedicato alla formazione in ambito sanitario
 IdFieldEnum.ACCREDITAMENTO_ALLEGATI__UTILIZZO=Modifica Utilizzo di sedi, strutture ed attrezzature di altro soggetto
-IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__IS_COORDINATORE=Modifica Flag Coordinatore Comitato Scientifico
 IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__ATTO_NOMINA=Modifica Atto Nomina Componente Comitato Scientifico
 IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__CODICEFISCALE=Modifica Codice Fiscale Componente Comitato Scientifico
 IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__COGNOME=Modifica Cognome Componente Comitato Scientifico
 IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__CV=Modifica CV Componente Comitato Scientifico
 IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__EMAIL=Modifica Email Componente Comitato Scientifico
 IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__FULL=Modifica Comitato Scientifico
+IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__IS_COORDINATORE=Modifica Flag Coordinatore Comitato Scientifico
 IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__NOME=Modifica Nome Componente Comitato Scientifico
 IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__PROFESSIONE=Modifica Professione Componente Comitato Scientifico
 IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__TELEFONO=Modifica Telefono Componente Comitato Scientifico
@@ -132,13 +132,13 @@ IdFieldEnum_valutazione.ACCREDITAMENTO_ALLEGATI__RELAZIONE_ATTIVITA_FORMATIVA=Re
 IdFieldEnum_valutazione.ACCREDITAMENTO_ALLEGATI__RICHIESTA_ACCREDITAMENTO_STANDARD=Richista di accreditamento standard
 IdFieldEnum_valutazione.ACCREDITAMENTO_ALLEGATI__SISTEMA_INFORMATICO=Sistema informatico dedicato alla formazione in ambito sanitario
 IdFieldEnum_valutazione.ACCREDITAMENTO_ALLEGATI__UTILIZZO=Utilizzo di sedi, strutture ed attrezzature di altro soggetto
-IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__IS_COORDINATORE=Flag Coordinatore
 IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__ATTO_NOMINA=Atto Nomina
 IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__CODICEFISCALE=Codice Fiscale
 IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__COGNOME=Cognome
 IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__CV=CV
 IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__EMAIL=Email
 IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__FULL=Comitato Scientifico
+IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__IS_COORDINATORE=Flag Coordinatore
 IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__NOME=Nome
 IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__PROFESSIONE=Professione
 IdFieldEnum_valutazione.COMPONENTE_COMITATO_SCIENTIFICO__TELEFONO=Telefono
@@ -330,6 +330,8 @@ error.note_obbligatorie=In caso di valutazione negativa è necessario compilare 
 error.number=il valore deve essere numerico
 error.number_max=valore superiore al valore massimo consentito
 error.number_min=valore inferiore al valore minimo consentito
+error.numero_comitato_integrazione=Il risultato della valutazione dell'integrazione viola il vincolo del numero minimo dei componenti del comitato scientifico. Si prega di ricontrollare la valutazione.
+error.numero_coordinatore_integrazione=Il risultato della valutazione dell'integrazione viola il vincolo di avere un e un solo coordinatore del comitato scientifico. Si prega di ricontrollare la valutazione.
 error.numero_massimo_giorni_evento_fad365=L'evento non può avere una durata superiore ai 365 giorni
 error.numero_massimo_giorni_evento_fsc730=L'evento non può avere una durata superiore ai 730 giorni
 error.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un Coordinatore e almeno 4 Componenti
@@ -337,6 +339,7 @@ error.numero_minimo_professioni=Nei componenti del Comitato Scientifico vi devon
 error.numero_minimo_professioni_settoriale=Nei componenti del Comitato Scientifico vi devono essere almeno 2 professioni analoghe alle professioni indicate per l’accreditamento
 error.numero_minimo_professionisti_sanitari=Il Comitato Scientifico deve essere composto da almeno 5 professionisti sanitari
 error.numero_partecipanti_non_valido=Il numero dei partecipanti deve essere compreso tra 1 e 100000
+error.numero_professionisti_sanitari_integrazione=Il risultato della valutazione dell'integrazione viola il vincolo del numero dei professionisti sanitari del comitato scientifico. Si prega di ricontrollare la valutazione.
 error.numero_referee=Selezionare esattamente 3 referee
 error.numero_referee_riassegnamento=Selezionare il corretto numero di Referee a cui riassegnare la domanda da valutare.
 error.ora_non_valida1=Ora non valida! La Seduta non può essere inserita in un orario già passato.
@@ -351,6 +354,7 @@ error.repeat=non corrisponde
 error.risultato_atteso_non_utilizzato=Risultato atteso non utilizzato
 error.same_password=Si prega di inserire una nuova password
 error.sede_legale_gia_inserita=La Sede Legale deve essere unica ed è già stata inserita per questo Provider
+error.sede_legale_integrazione=Il risultato della valutazione dell'integrazione viola il vincolo di avere una e una sola sede legale. Si prega di ricontrollare la valutazione.
 error.select=selezionare almeno un valore
 error.selezionare_tipologia_inserimento_programma=Selezionare una tipologia di Evento FSC per procedere con l'inserimento del Programma
 error.selezionare_tipologia_sede=Selezionare almeno una tipologia di Sede
@@ -419,12 +423,14 @@ label.allegati_note_osservazioni=Allegati Note e Osservazioni
 label.allegati_note_osservazioni_integrazione_preavviso_rigetto=Note e Osservazioni sull'Integrazione e/o sul Preavviso di Rigetto
 label.allegato=Allegato
 label.allegatoComunicazione=Inserisci Allegato
+label.allegatoDecadenza=Documento di decadenza
 label.allegatoRisposta=Inserisci Allegato
 label.allegato_autocertificazione_assenza_finanziamenti=Allegato autocertificazione assenza finanziamenti
 label.allegato_autocertificazione_assenza_finanziamenti_sponsor=Autocertificazione relativa all'assenza di partecipazione finanziaria di imprese interessate agli alimenti per la prima infanzia
 label.allegato_autocertificazione_autorizzazione_ministero=Autocertificazione di autorizzazione del Ministero della Salute
 label.allegato_comunicazione=Allegato:
 label.allegato_contratti_accordi_convenzioni=Contratti o accordi di altre forme di finanziamento
+label.allegato_decadenza=Allegato decadenza Provider
 label.allegato_non_inserito=Allegato non inserito
 label.allegato_risposta=Allegato:
 label.altri_n_destinatari=... altri {0} destinatari
@@ -466,6 +472,7 @@ label.azione=Azione
 label.azioni=Azioni
 label.benvenuto=Benvenuto
 label.benvenuto_provider=Benvenuto {0}!
+label.blocca=Blocca
 label.blocca_seduta=Blocca Seduta
 label.bloccata=Bloccata
 label.bloccate=Bloccate
@@ -525,6 +532,7 @@ label.comunicazioni_con_provider=del Provider
 label.comunicazioni_dashboard=Dashboard delle Comunicazioni
 label.comunicazioni_inviate=Comunicazioni Inviate
 label.comunicazioni_provider=Comunicazioni del Provider
+label.con_crediti_non_confermati=Con crediti non confermati
 label.conclusione_del_procedimento=Conclusione del procedimento
 label.concluso=Concluso
 label.conferma=Conferma
@@ -532,6 +540,7 @@ label.conferma_azione=Conferma Azione
 label.conferma_chiusura_comunicazione=Conferma della chiusura della Comunicazione
 label.conferma_conclusione_del_procedimento=Procedere con la chiusura del procedimento di accreditamento?
 label.conferma_crediti_proposti_dal_sistema=Conferma crediti proposti dal sistema
+label.conferma_decadenza_provider=Conferma decadenza del Provider
 label.conferma_evento=Conferma Evento
 label.conferma_inserimento_piano=Inserendo il Piano Formativo non sarà più possibile modificare i dati della domanda.
 label.conferma_modifiche_evento=Valida modifiche
@@ -735,6 +744,8 @@ label.flag_crediti_confermati=Crediti confermati
 label.flusso_accreditamento=Flusso Accreditamento
 label.flusso_accreditamento_provvisorio=Flusso Accreditamento Provvisorio
 label.flusso_accreditamento_standard=Flusso Accreditamento Standard
+label.flusso_conclusione_procedimento=Flusso Conclusione Procedimento
+label.flusso_variazione_dati=Flusso Variazione Dati
 label.forme_finanziamento_radio=Sono presenti altre forme di finanziamento?
 label.from=Da:
 label.from_provider=Da: {0} ({1})
@@ -934,6 +945,7 @@ label.mostra_riepilogo_valutazioni=Mostra riepilogo valutazione
 label.mostra_storico_valutazioni=Mostra storico valutazioni
 label.mostra_valutazione=Mostra valutazione
 label.mostra_valutazioni_complessive=Mostra valutazioni complessive
+label.motivazione=Motivazione
 label.n_verbale=Verbale numero
 label.nascondi=Nascondi
 label.natura_organizzazione=Natura dell'organizzazione
@@ -983,9 +995,11 @@ label.non_abilitato=Non abilitato
 label.non_ancora_lette=non ancora lette
 label.non_effettuata_consecutivamente=Non effettuata (consecutivamente)
 label.non_effettuate_consecutivamente=Non effettuate (consecutivamente)
+label.non_ha_completato_domanda_accreditamento_in_tempo=Non ha completato la domanda di accreditamento in tempo
 label.non_ha_inserito_piano_formativo=Non ha inserito il piano formativo
 label.non_ha_pagato_quota_annuale=Non ha pagato la quota annuale
 label.non_ha_valutato=Non ha valutato le domande di accreditamento assegnategli
+label.non_hanno_completato_domanda_accreditamento_in_tempo=Non hanno completato la domanda di accreditamento in tempo
 label.non_hanno_inserito_piano_formativo=Non hanno inserito il piano formativo
 label.non_hanno_pagato_quota_annuale=Non hanno pagato la quota annuale
 label.non_hanno_valutato=Non hanno valutato le domande di accreditamento assegnate loro
@@ -1435,6 +1449,7 @@ message.piano_formativo_anno_gia_inserito=Piano formativo per l''anno {0} già i
 message.presa_in_carico=La Domanda di Accreditamento è stata correttamente presa in carico.
 message.presa_visione_success=Presa Visione eseguita correttamente.
 message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
+message.provider_bloccato_success=Provider bloccato con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.relazione_annuale_salvata=Relazione Annuale salvata con successo.
 message.risposta_inviata=Risposta inviata con successo.
@@ -1470,16 +1485,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.non_ha_completato_domanda_accreditamento_in_tempo=Non ha completato la domanda di accreditamento in tempo
-label.non_hanno_completato_domanda_accreditamento_in_tempo=Non hanno completato la domanda di accreditamento in tempo
-label.con_crediti_non_confermati=Con crediti non confermati
-label.blocca=Blocca
-label.conferma_decadenza_provider=Conferma decadenza del Provider
-label.allegatoDecadenza=Documento di decadenza
-label.motivazione=Motivazione
-message.provider_bloccato_success=Provider bloccato con successo.
-label.allegato_decadenza=Allegato decadenza Provider
-error.numero_comitato_integrazione=Il risultato della valutazione dell'integrazione viola il vincolo del numero minimo dei componenti del comitato scientifico. Si prega di ricontrollare la valutazione.
-error.numero_coordinatore_integrazione=Il risultato della valutazione dell'integrazione viola il vincolo di avere un e un solo coordinatore del comitato scientifico. Si prega di ricontrollare la valutazione.
-error.numero_professionisti_sanitari_integrazione=Il risultato della valutazione dell'integrazione viola il vincolo del numero dei professionisti sanitari del comitato scientifico. Si prega di ricontrollare la valutazione.
-error.sede_legale_integrazione=Il risultato della valutazione dell'integrazione viola il vincolo di avere una e una sola sede legale. Si prega di ricontrollare la valutazione.
