--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -531,6 +531,7 @@ label.comunicazioni=Comunicazioni
 label.comunicazioni_con_provider=del Provider
 label.comunicazioni_dashboard=Dashboard delle Comunicazioni
 label.comunicazioni_inviate=Comunicazioni Inviate
+label.comunicazioni_non_risposte_provider=Comunicazioni non risposte del Provider
 label.comunicazioni_provider=Comunicazioni del Provider
 label.con_crediti_non_confermati=Con crediti non confermati
 label.conclusione_del_procedimento=Conclusione del procedimento
@@ -1006,6 +1007,9 @@ label.non_hanno_valutato=Non hanno valutato le domande di accreditamento assegna
 label.non_inserito=non inserito
 label.non_integrato_dal_provider=Valore non modificato dal Provider in fase di integrazione
 label.non_pagato=Non pagato
+label.non_risposta=Non risposta
+label.non_risposte=Non risposte
+label.non_risposte_al_provider=ancora da rispondere per il Provider
 label.non_specificato=non specificato
 label.non_valido=non valido
 label.non_valutato=non valutato
@@ -1261,6 +1265,7 @@ label.seleziona_anagrafica=Seleziona anagrafica esistente
 label.seleziona_anno=Seleziona l'anno del piano formativo
 label.seleziona_anno_riferimento=Selezionare l'anno di riferimento
 label.seleziona_button=Seleziona
+label.seleziona_evento=Seleziona un evento
 label.seleziona_referee=Seleziona {0} Referee per la valutazione dell'Accreditamento
 label.seleziona_referee_necessari=Seleziona {0} Referee a cui assegnare la domanda
 label.seleziona_referee_variazione_dati=Seleziona il Referee per la valutazione della Variazione dei Dati e dei Documenti
@@ -1297,7 +1302,7 @@ label.stato_provider=Stato Provider
 label.stato_spedizione=Stato Spedizione
 label.stato_valutazione=Stato Valutazione
 label.status=Status
-label.storico=in storico
+label.storico=In storico
 label.straniera=Straniera
 label.straniero=Straniero
 label.supporto_disciplinare_fad=FAD con supporto disciplinare svolto da esperto (Docente o tutor)
