--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -476,9 +476,14 @@ label.cambio_password=Cambio password
 label.campo=Campo
 label.cancellato=Cancellato
 label.caninsert_domanda_accreditamento_standard=Inserimento Domanda Accreditamento Standard
+label.caninsert_domanda_accreditamento_standard_scadenza=Scadenza Inserimento Domanda Accreditamento Standard
 label.caninsert_eventi=Inserimento Eventi
+label.caninsert_nuova_domanda_accreditamento_provvisorio=Inserimento nuova domanda accreditamento provvisorio
+label.caninsert_nuova_domanda_accreditamento_provvisorio_partenza=Data partenza inserimento nuova domanda accreditamento provvisorio
 label.caninsert_piano_formativo=Inserimento Piano Formativo
+label.caninsert_piano_formativo_scadenza=Scadenza Inserimento Piano Formativo
 label.caninsert_relazione_annuale=Inserimento Relazione Annuale
+label.caninsert_relazione_annuale_scadenza=Scadenza Inserimento Relazione Annuale
 label.cap=CAP
 label.caratteri_rimanenti=caratteri rimanenti
 label.carica=Carica
@@ -499,6 +504,7 @@ label.chiudi_tutte=Chiudi tutte
 label.chiusa=Chiusa
 label.chiuse=Chiuse
 label.chiuse_comunicazione_messaggio={0} Comunicazioni chiuse
+label.codiceCogeaps=Codice Co.Ge.A.P.S.
 label.codiceFiscaleOrIVA=Codice fiscale / Partita IVA
 label.codiceFiscaleOrIVAProvider=Codice Fiscale / Partita IVA Provider
 label.codice_fiscale=Codice Fiscale
@@ -583,10 +589,10 @@ label.data_fine=Data fine
 label.data_fine_accreditamento=Data Fine Accreditamento
 label.data_inizio=Data inizio
 label.data_invio=Data invio
+label.dataModifica=Data modifica
 label.data_ora_scadenza_valutazione=Data e Ora scadenza Valutazione
 label.data_pagamento=Data Pagamento
 label.data_protocollo=Data Protocollo
-label.data_rinnovo_inserimento_domanda_accreditamento_provvisorio=Inserimento nuova domanda accreditamento provvisorio
 label.data_scadenza_pagamento=Data scadenza pagamento
 label.data_scadenza_rendiconto=Data Scadenza Rendiconto
 label.data_ultima_modifica=Data Ultima Modifica
@@ -658,6 +664,7 @@ label.domande_accreditamento=Domande di Accreditamento
 label.domande_accreditamento_in_odg=Domande di accreditamento nell'Ordine del giorno della Seduta
 label.domande_provvisorie=Domande Provvisorie
 label.domande_standard=Domande Standard
+label.dopo=Dopo
 label.dotazione_hardware_software=Dotazione hardware e software necessaria all'utente per svolgere l'evento
 label.durata=Durata
 label.durata_impegno_studio=Durata / Impegno studio
@@ -1093,6 +1100,7 @@ label.presente_legale_rappresentante_sottoscrizione_verbale=\u00C8 presente il L
 label.presenzaPartecipanti=Presenza dei Partecipanti
 label.presenza_partecipanti=Presenza dei Partecipanti
 label.prezzo=Prezzo
+label.prima=Prima
 label.privata=Privata
 label.procedura_formativa=Tipologia evento
 label.procedura_verifica_qualita=\u00C8 prevista una procedura di verifica della qualità percepita
@@ -1107,6 +1115,7 @@ label.profilo=Profilo
 label.programma=Programma
 label.programma_attività_formativa=Programma attività formativa
 label.programma_del=Programma del
+label.propertyName=Proprietà
 label.protocolli_sospesi=Protocolli in sospeso
 label.proveniente_da_accreditamento=Piano formativo inserito nella domanda di accreditamento (non modificabile)
 label.provider=Provider
@@ -1233,6 +1242,7 @@ label.sede_operativa=Sede Operativa
 label.sede_operativa_coincide=Sede Operativa (coincide con Sede Legale)
 label.sede_valutazione=Sede della Valutazione
 label.sedi=Sedi
+label.sedi_operative=Sedi Operative
 label.sedi_provider=Sedi del Provider
 label.seduta=Seduta Ordine del Giorno
 label.seduta_target=Seduta nella quale spostare la Domanda di Accreditamento
