Vaschette per eventi con alimentazione prima infanzia e medicine non convenzionali

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -533,7 +533,9 @@ label.comunicazioni_dashboard=Dashboard delle Comunicazioni
 label.comunicazioni_inviate=Comunicazioni Inviate
 label.comunicazioni_non_risposte_provider=Comunicazioni non risposte del Provider
 label.comunicazioni_provider=Comunicazioni del Provider
+label.con_alimentazione_prima_infanzia=con contenuti di alimentazione prima infanzia
 label.con_crediti_non_confermati=Con crediti non confermati
+label.con_medicine_non_convenzionali=con contenuti di medicine non convenzionali
 label.conclusione_del_procedimento=Conclusione del procedimento
 label.concluso=Concluso
 label.conferma=Conferma
