Vaschetta Provider non hanno inserito la relazione annuale alla scedenza

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1000,10 +1000,12 @@ label.non_effettuata_consecutivamente=Non effettuata (consecutivamente)
 label.non_effettuate_consecutivamente=Non effettuate (consecutivamente)
 label.non_ha_completato_domanda_accreditamento_in_tempo=Non ha completato la domanda di accreditamento in tempo
 label.non_ha_inserito_piano_formativo=Non ha inserito il piano formativo
+label.non_ha_inserito_relazione_annuale=Non ha inserito la relazione annuale alla scadenza
 label.non_ha_pagato_quota_annuale=Non ha pagato la quota annuale
 label.non_ha_valutato=Non ha valutato le domande di accreditamento assegnategli
 label.non_hanno_completato_domanda_accreditamento_in_tempo=Non hanno completato la domanda di accreditamento in tempo
 label.non_hanno_inserito_piano_formativo=Non hanno inserito il piano formativo
+label.non_hanno_inserito_relazione_annuale=Non hanno inserito la relazione annuale alla scadenza
 label.non_hanno_pagato_quota_annuale=Non hanno pagato la quota annuale
 label.non_hanno_valutato=Non hanno valutato le domande di accreditamento assegnate loro
 label.non_inserito=non inserito
