--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -479,6 +479,7 @@ label.bloccate=Bloccate
 label.brochure_evento=Brochure dell'evento
 label.budgetPrevisionale=Budget previsionale per l’anno in corso
 label.cambia_password=Cambia password
+label.cambiato_dal_provider=Modificato dal Provider
 label.cambio_password=Cambio password
 label.campo=Campo
 label.cancellato=Cancellato
@@ -1465,6 +1466,7 @@ message.sede_salvata=Il dati relativi alla sede sono stati salvati con successo.
 message.seduta_eliminata=Seduta eliminata.
 message.seduta_salvata=La Seduta è stata salvata con successo.
 message.seduta_valutata=Seduta conclusa correttamente con la valutazione di tutte le Domande inserite nell'Ordine del Giorno.
+message.sono_evidenziati_gli_elementi_aggiunti_dal_ultimo_accreditamento=Sono evidenziati in verde gli elementi aggiunti o completamente sostituiti rispetto l'ultima domanda di accreditamento
 message.sono_evidenziati_gli_elementi_aggiunti_e_rimossi_in_attesa_di_approvazione=Sono evidenziati gli elementi aggiunti e rimossi che saranno effettivi solo dopo approvazione da parte della Segreteria ECM.
 message.sottoscrivente_inserito=Sottoscrivente della Valutazione sul Campo inserito con successo!
 message.utente_creato=Il nuovo utente è stato correttamente registrato ed è stata inviata una e-mail con le credenziali di accesso.
