PDF riepilogo domanda di accreditamento

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -952,7 +952,7 @@ label.mostra_valutazioni_complessive=Mostra valutazioni complessive
 label.motivazione=Motivazione
 label.n_verbale=Verbale numero
 label.nascondi=Nascondi
-label.natura_organizzazione=Natura dell'organizzazione
+label.natura_organizzazione=Natura dell'Organizzazione
 label.nazionalita=Nazionalità
 label.nd=N\\D
 label.nessun_allegato=Nessun allegato disponibile
@@ -1147,7 +1147,7 @@ label.pulisci=Pulisci
 label.qualifica=Qualifica
 label.quota_partecipazione=Quota di partecipazione
 label.quote_di_partecipazione=Quote di partecipazione
-label.ragione_sociale=Ragione sociale
+label.ragione_sociale=Ragione Sociale
 label.rapportoAttuazione=Percentuale eventi corrispondenti al Piano Formativo
 label.rapporto_costi_entrate=Rapporto Costi/Ricavi
 label.rapporto_eventi=Rapporto Eventi
@@ -1497,3 +1497,6 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.riepilogo_domandaTipo_domandaId_domandaStato_providerDenominazione=Riepilogo della Domanda di Accreditamento {0}: {1}, in stato {2}, richiesta dal Provider {3}
+label.coordinatore=Coordinatore
+label.componente=Componente
