--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1500,3 +1500,11 @@ month.settembre=Settembre
 label.riepilogo_domandaTipo_domandaId_domandaStato_providerDenominazione=Riepilogo della Domanda di Accreditamento {0}: {1}, in stato {2}, richiesta dal Provider {3}
 label.coordinatore=Coordinatore
 label.componente=Componente
+label.riepilogo_pf_domandaTipo_domandaId_providerDenominazione=Riepilogo degli Eventi inseriti nel Piano Formativo dell''anno {0} relativo alla Domanda di Accreditamento {1}: {2}, richiesta dal Provider {3}
+label.evento_idEvento=Evento: {0}
+label.riepilogo_valutazione_domandaTipo_domandaId_providerDenominazione_valutatoreFullNome=Riepilogo della Valutazione eseguita dall''utente {0} e relativa alla Domanda di Accreditamento {1}: {2}, richiesta dal Provider {3}
+label.valutazione_complessiva=Valutazione complessiva
+label.sede_operativa_withAddress=Sede Operativa in {0}
+label.sede_legale_withAddress=Sede Legale in {0}
+label.coordinatore_withName=Coordinatore: {0}
+label.componente_withName=Componente: {0}
