--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,6 +1,9 @@
 ######## LABEL ########
 #message.errore_eccezione=Dom, non so come dirtelo, ma si è spaccato tutto... di nuovo
 Email=email non valida
+AuditCollectionChangeTypeEnum.ADDED=Aggiunto
+AuditCollectionChangeTypeEnum.CHANGED=Modificato
+AuditCollectionChangeTypeEnum.REMOVED=Elminato
 IdFieldEnum.ACCREDITAMENTO_ALLEGATI__ATTO_COSTITUIVO=Modifica Atto Costitutivo e statuto
 IdFieldEnum.ACCREDITAMENTO_ALLEGATI__DICHIARAZIONE_ESCLUSIONE=Modifica Dichiarazione esclusione conflitto di interessi per l’oggetto sociale
 IdFieldEnum.ACCREDITAMENTO_ALLEGATI__DICHIARAZIONE_LEGALE=Modifica Dichiarazione del Legale Rappresentante
@@ -418,6 +421,15 @@ label.allegati=Allegati
 label.allegati_note_osservazioni=Allegati Note e Osservazioni
 label.allegati_note_osservazioni_integrazione_preavviso_rigetto=Note e Osservazioni sull'Integrazione e/o sul Preavviso di Rigetto
 label.allegato=Allegato
+label.allegato.attoCostitutivo=Allegato - Atto Costitutivo e statuto
+label.allegato.dichiarazioneEsclusione=Allegato - Dichiarazione esclusione conflitto di interessi per l’oggetto sociale
+label.allegato.esperienzaFormazione=Allegato - Esperienza formazione in ambito sanitario
+label.allegato.utilizzo=Allegato - Utilizzo di sedi, strutture ed attrezzature di altro soggetto
+label.allegato.sistemaInformatico=Allegato - Sistema informatico dedicato alla formazione in ambito sanitario
+label.allegato.pianoQualita=Allegato - Piano di Qualità
+label.allegato.dichiarazioneLegale=Allegato - Dichiarazione del Legale Rappresentante
+label.allegato.richiestaAccreditamentoStandard=Allegato - Richiesta di Accreditamento Standard
+label.allegato.relazioneAttivitaFormativa=Allegato - Relazione sull'Attività Formativa
 label.allegatoComunicazione=Inserisci Allegato
 label.allegatoRisposta=Inserisci Allegato
 label.allegato_autocertificazione_assenza_finanziamenti=Allegato autocertificazione assenza finanziamenti
@@ -436,6 +448,7 @@ label.anagrafe_regionale_crediti_anno=Anagrafe Regionale Crediti - Anno {0}
 label.anagrafe_regionale_crediti_info={0} {1} {2} - Acquisito {3} Crediti nell''anno {4}
 label.anagrafica_salvata=Anagrafica Salvata
 label.anagrafica_salvata=L'anagrafica è stata salvata con successo
+label.anagrafica.id=Anagrafica Id
 label.anagrafiche=Anagrafiche
 label.anagrafiche_evento=Anagrafiche Relative agli Eventi
 label.anagrafiche_provider=Anagrafiche del provider
@@ -459,11 +472,13 @@ label.attoCostitutivo=Atto Costitutivo e statuto
 label.attoNomina=Atto di nomina
 label.atto_delega=Atto di delega
 label.attua=Attua
+label.attuato=Attuato
 label.attuazione_evento=Attuazione
 label.autorizzazione_privacy=Dichiaro ai sensi e per gli effetti del D.lgs. n. 196/2003, di essere in possesso del consenso scritto alla pubblicazione dei dati personali da parte dei soggetti
 label.avanti=avanti
 label.azione=Azione
 label.azioni=Azioni
+label.azioni_ruoli=Azioni/Ruoli
 label.benvenuto=Benvenuto
 label.benvenuto_provider=Benvenuto {0}!
 label.blocca_seduta=Blocca Seduta
@@ -489,6 +504,7 @@ label.caratteri_rimanenti=caratteri rimanenti
 label.carica=Carica
 label.cartaIdentita=Carta d'identità
 label.carta_identita=Carta di Identità
+label.categoria=Categoria
 label.causale=Causale
 label.cellulare=Cellulare
 label.cerca=Cerca
@@ -602,6 +618,7 @@ label.data_verifica_loco=Data della verifica in loco
 label.date=Date
 label.date_intermedie=Date intermedie
 label.dati_accreditamento=Dati Accreditamento
+label.dati_accreditamento.id=Dati Accreditamento - Id
 label.dati_attività=Dati dell'attività
 label.dati_dei_responsabili=Dati dei Responsabili
 label.dati_del=Dati del
@@ -612,6 +629,14 @@ label.dati_del_provider=Dati del provider
 label.dati_del_richiedente=Richiedente
 label.dati_di_accreditamento=Dati di accreditamento
 label.dati_economici=Dati economici
+label.dati_economici.fatturatoComplessivoAnnoUno=Dati economici - Fatturato o Costi complessivi degli ultimi 3 anni - Primo
+label.dati_economici.fatturatoComplessivoAnnoDue=Dati economici - Fatturato o Costi complessivi degli ultimi 3 anni - Secondo
+label.dati_economici.fatturatoComplessivoAnnoTre=Dati economici - Fatturato o Costi complessivi degli ultimi 3 anni - Terzo
+label.dati_economici.fatturatoFormazioneAnnoUno=Dati economici - Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni - Primo
+label.dati_economici.fatturatoFormazioneAnnoDue=Dati economici - Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni - Secondo
+label.dati_economici.fatturatoFormazioneAnnoTre=Dati economici - Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni - Terso
+label.dati_economici.estrattoBilancioComplessivo=Dati economici - Estratto del bilancio complessivo degli ultimi 3 anni
+label.dati_economici.estrattoBilancioFormazione=Dati economici - Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni e budget previsionale
 label.dati_economici_info=Dati non obbligatori. Se vengono compilati i dati diventa obbligatoria la presentazione dei documenti allegati.
 label.dati_legale=Dati del Legale
 label.dati_legale_login=Dati del\nLegale Rappresentante
@@ -1011,6 +1036,10 @@ label.note_osservazioni_preavviso_rigetto=Note e Osservazioni sul Preavviso di R
 label.notifica_cambio_crediti=Avviso: il valore dei crediti attribuiti all''evento precedentemente registrato era di: {0}, verrà ora aggiornato con il valore di: {1} crediti. Il numero dei crediti calcolati automaticamente dal sistema corrisponde a: {2}
 label.notifica_non_cambio_crediti=Avviso: il valore dei crediti attribuiti all''evento rimane di: {0}. Il numero dei crediti calcolati automaticamente dal sistema corrisponde a: {1}
 label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
+label.dati_struttura_numero_dipendenti_indeterminato=Dati della Struttura - Numero dipendenti dedicati alla formazione Tempo Indeterminato
+label.dati_struttura_numero_dipendenti_altro=Dati della Struttura - Numero dipendenti dedicati alla formazione Altro personale
+label.dati_struttura_funzionigramma=Dati della Struttura - Funzionigramma
+label.dati_struttura_organigramma=Dati della Struttura - Organigramma
 label.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un Coordinatore e almeno 4 Componenti
 label.numero_partecipanti=Numero dei partecipanti
 label.numero_partecipanti=Numero partecipanti
@@ -1038,6 +1067,7 @@ label.obiettivo_formativo=Obiettivo Formativo
 label.obiettivo_formativo_nazionale=Obiettivo Strategico Nazionale / area di acquisizione competenze
 label.obiettivo_formativo_regionale=Obiettivo Strategico Regionale
 label.obiettivo_strategico_nazionale=Obiettivo strategico Nazionale / Aree di acquisizione competenze
+label.appartiene_a_obiettivo_strategico_nazionale=Obiettivo strategico Nazionale?
 label.obiettivo_strategico_regionale=Obiettivo strategico Regionale
 label.oggetto=Oggetto:
 label.oggetto_discussione=Motivazione
@@ -1076,6 +1106,8 @@ label.percezione_interesse_commerciale_sanita=Percezione Evento Interesse Commer
 label.permessi=Permessi
 label.persone=Persone
 label.pfa_provider=Piano Formativo del Provider
+#label.piano_formativo.id=label.id
+label.piano_formativo.annoPianoFormativo=Relativo all''anno
 label.pianoFormativo=Piano Formativo
 label.pianoQualita=Piano di Qualità
 label.piano_formativo=Piano Formativo
@@ -1112,6 +1144,7 @@ label.professioni_cui_evento_si_riferisce=Professioni a cui l'evento si riferisc
 label.professioni_discipline=Professioni / Discipline
 label.profili=Profili
 label.profilo=Profilo
+label.prefix=Prefix
 label.programma=Programma
 label.programma_attività_formativa=Programma attività formativa
 label.programma_del=Programma del
@@ -1201,6 +1234,7 @@ label.richieste_standard_accreditamento=Richieste di accreditamento Standard
 label.ricordami=Ricordami
 label.riedita=Riedita
 label.riedizione_evento=Crea Riedizione
+label.riepilogo=Riepilogo
 label.riepilogo_accreditamento=Domanda di Accreditamento {0} ({1})
 label.riepilogo_evento=Riepilogo dell''Evento {0}
 label.riepilogo_piano_formativo=Riepilogo degli Eventi inseriti nel Piano Formativo
@@ -1224,6 +1258,7 @@ label.ruolo=Ruolo
 label.salva=Salva
 label.salva_bozza=Salva come bozza
 label.salva_modifiche=Salva Modifiche
+label.sanitaria=Sanitaria?
 label.scadenza=scadenza:
 label.scadenza_valutazione=Data scadenza Valutazione
 label.scarica_pdf_verbale=Genera modello precompilato del Verbale di Valutazione sul Campo
@@ -1297,6 +1332,7 @@ label.storico=in storico
 label.straniera=Straniera
 label.straniero=Straniero
 label.supporto_disciplinare_fad=FAD con supporto disciplinare svolto da esperto (Docente o tutor)
+label.svolgimento=Svolgimento
 label.sì=Sì
 label.tel_secondario=Telefono secondario
 label.telefono=Telefono
@@ -1304,6 +1340,7 @@ label.tempo_dedicato=Tempo Dedicato
 label.tempo_dedicato=Tempo Dedicato
 label.tempo_indeterminato=Tempo indeterminato
 label.tipo=Tipo
+label.tipo_domanda=Tipologia domanda
 label.tipoOrganizzatore_nome=Tipologia
 label.tipo_accreditamento=Tipo Accreditamento
 label.tipo_materiale_rilasciato=Tipo materiale durevole rilasciato ai partecipanti
@@ -1313,10 +1350,17 @@ label.tipologia=Tipologia:
 label.tipologiaAccreditamento=Accreditamento per tipologia
 label.tipologia_evento=Tipologia dell'evento
 label.tipologia_formativa=Tipologia Formativa
+label.tipologia_formativa_tipologiaAccreditamento=Tipologia Formativa - Accreditamento per tipologia
+label.tipologia_formativa_procedure_formative_tipologia=Tipologia Formativa - Tipologia dell'offerta formativa
+label.tipologia_formativa_professioniAccreditamento=Tipologia Formativa - Accreditamento per professioni
+label.tipologia_formativa_professioniAccreditamento=Tipologia Formativa - Accreditamento per professioni
+label.tipologia_formativa_professioni=Tipologia Formativa - Professioni
+label.tipologia_formativa_discipline=Tipologia Formativa - Discipline
 label.tipologia_list=Tipologia
 label.tipologia_obiettivi_formativi=Obiettivi formativi
 label.tipologia_sede=Tipologia Sede
 label.titolare=Titolare
+label.titolaresostituto=Titolare/Sostituto
 label.titolo=Titolo
 label.titolo_convegno=Titolo del Convegno
 label.titolo_evento=Titolo Evento
