fix vari variazione dati!

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -519,9 +519,11 @@ label.comitato_scientifico=Comitato Scientifico
 label.commissione=Commissione ECM
 label.compilazione_verbale_valutazione_loco=Compilazione Verbale della Valutazione in Loco
 label.completa=Completa
+label.componente=Componente
 label.componente_comitato=Componente
 label.componente_crec_team_leader=Componente CRECM - Team Leader
 label.componente_segreteria_numero=Componente Segreteria {0}
+label.componente_withName=Componente: {0}
 label.componenti_comitato_scientifico=Componenti del Comitato Scientifico
 label.componenti_segreteria=Componenti della Segreteria
 label.componi=Componi
@@ -557,8 +559,10 @@ label.contratto_da_inserire=CONTRATTO DA INSERIRE
 label.contratto_sponsor=Contratto dello Sponsor
 label.contributo_annuale=Contributo Annuale
 label.contributo_annuale_provider=Contributi Annuali del Provider
+label.coordinatore=Coordinatore
 label.coordinatore_comitato=Coordinatore
 label.coordinatore_comitato_scientifico=Coordinatore Comitato Scientifico
+label.coordinatore_withName=Coordinatore: {0}
 label.costo_totale_eventi=Costo totale eventi
 label.crea_account=Crea Account
 label.crea_anagrafica=Crea Anagrafica
@@ -718,6 +722,7 @@ label.evento=Evento
 label.evento_con_crediti_non_confermati=Evento con crediti non confermati
 label.evento_contenuti=Contenuti dell'evento
 label.evento_contiene_questi_contenuti=L'evento formativo prevede i seguenti contenuti?
+label.evento_idEvento=Evento: {0}
 label.evento_link=Link evento:
 label.evento_non_in_piano_formativo=Evento non inserito nel piano formativo
 label.evento_non_modificabile_gia_attuato=Evento non modificabile poichè accreditato
@@ -1216,10 +1221,13 @@ label.ricordami=Ricordami
 label.riedita=Riedita
 label.riedizione_evento=Crea Riedizione
 label.riepilogo_accreditamento=Domanda di Accreditamento {0} ({1})
+label.riepilogo_domandaTipo_domandaId_domandaStato_providerDenominazione=Riepilogo della Domanda di Accreditamento {0}: {1}, in stato {2}, richiesta dal Provider {3}
 label.riepilogo_evento=Riepilogo dell''Evento {0}
+label.riepilogo_pf_domandaTipo_domandaId_providerDenominazione=Riepilogo degli Eventi inseriti nel Piano Formativo dell''anno {0} relativo alla Domanda di Accreditamento {1}: {2}, richiesta dal Provider {3}
 label.riepilogo_piano_formativo=Riepilogo degli Eventi inseriti nel Piano Formativo
 label.riepilogo_valutazione=Riepilogo Valutazione
 label.riepilogo_valutazione_accreditamento=Valutazione dell''Accreditamento {0} ({1})
+label.riepilogo_valutazione_domandaTipo_domandaId_providerDenominazione_valutatoreFullNome=Riepilogo della Valutazione eseguita dall''utente {0} e relativa alla Domanda di Accreditamento {1}: {2}, richiesta dal Provider {3}
 label.riepilogo_valutazioni_complessive=Riepilogo delle Valutazioni Complessive
 label.riepilogo_valutazioni_storicizzate=Riepilogo delle valutazioni in storico
 label.rimuovi=Rimuovi
@@ -1252,8 +1260,10 @@ label.scheda_qualita_percepita=Scheda Qualità Percepita
 label.sede=Sede
 label.sede_di=Sede di
 label.sede_legale=Sede Legale
+label.sede_legale_withAddress=Sede Legale in {0}
 label.sede_operativa=Sede Operativa
 label.sede_operativa_coincide=Sede Operativa (coincide con Sede Legale)
+label.sede_operativa_withAddress=Sede Operativa in {0}
 label.sede_valutazione=Sede della Valutazione
 label.sedi=Sedi
 label.sedi_provider=Sedi del Provider
@@ -1374,6 +1384,7 @@ label.valutatore=Valutatore
 label.valutazione=Valutazione
 label.valutazione_commissione=Valutazione Commissione
 label.valutazione_commissione_ECM=Valutazione Commissione ECM
+label.valutazione_complessiva=Valutazione complessiva
 label.valutazione_domande_seduta=Valutazione delle Domande della Seduta del {0}
 label.valutazione_sul_campo=Valutazione sul Campo
 label.valutazioni=Valutazioni
@@ -1463,6 +1474,7 @@ message.profilo_salvato=Il dati del profilo sono stati salvati con successo.
 message.provider_bloccato_success=Provider bloccato con successo.
 message.provider_salvato=Il dati del provider sono stati salvati con successo.
 message.relazione_annuale_salvata=Relazione Annuale salvata con successo.
+message.richiesta_variazione_dati_inviata=Richiesta variazione dati inviata con successo.
 message.risposta_inviata=Risposta inviata con successo.
 message.scadenze_evento_aggiornate=Scadenze dell'evento aggiornate con successo.
 message.sede_eliminata=Sede eliminata.
@@ -1497,14 +1509,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.riepilogo_domandaTipo_domandaId_domandaStato_providerDenominazione=Riepilogo della Domanda di Accreditamento {0}: {1}, in stato {2}, richiesta dal Provider {3}
-label.coordinatore=Coordinatore
-label.componente=Componente
-label.riepilogo_pf_domandaTipo_domandaId_providerDenominazione=Riepilogo degli Eventi inseriti nel Piano Formativo dell''anno {0} relativo alla Domanda di Accreditamento {1}: {2}, richiesta dal Provider {3}
-label.evento_idEvento=Evento: {0}
-label.riepilogo_valutazione_domandaTipo_domandaId_providerDenominazione_valutatoreFullNome=Riepilogo della Valutazione eseguita dall''utente {0} e relativa alla Domanda di Accreditamento {1}: {2}, richiesta dal Provider {3}
-label.valutazione_complessiva=Valutazione complessiva
-label.sede_operativa_withAddress=Sede Operativa in {0}
-label.sede_legale_withAddress=Sede Legale in {0}
-label.coordinatore_withName=Coordinatore: {0}
-label.componente_withName=Componente: {0}
